# p2pshare

./: Cargo.toml  DISCOVERY.md  FLUTTER_INTEGRATION.md  IMPROVEMENTS.md  TESTING.md  develop.md  frb_config.yaml  rust-project-standards.skill  study.md
.pencil/: localp2p.pen
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/suno2/localp2p/localp2p_app/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: bridge.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  lib.freezed.dart  main.dart  p2p_manager.dart  types.dart
app/lib/bridge/: bridge.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
app/lib/native/: p2p_ffi.dart
app/lib/screens/: chat_screen.dart  device_detail_screen.dart  device_list_screen.dart  home_screen.dart  settings_screen.dart
app/lib/services/: log_service.dart  storage_service.dart
app/lib/widgets/: chat_bubble_received.dart  chat_bubble_sent.dart  device_card.dart  unified_app_bar.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
crates/ffi/: Cargo.toml  README.md  build.sh  cbindgen.toml
crates/ffi/examples/: simple  simple.c
crates/ffi/include/: localp2p.h
crates/ffi/src/: bridge.rs  callbacks.rs  error.rs  frb_generated.dart  frb_generated.rs  lib.rs  types.rs
crates/ffi/src/src/: frb_generated.rs
crates/mdns/: Cargo.toml
crates/mdns/src/: config.rs  discovery.rs  identity.rs  lib.rs  managed_discovery.rs  node.rs  publisher.rs  user_info.rs
crates/mdns/src/chat/: codec.rs  manager.rs  message.rs  mod.rs  traits.rs
crates/tui-app/: Cargo.toml
crates/tui-app/src/: app.rs  event.rs  lib.rs  ui.rs
crates/tui-app/src/components/: chat.rs  chat_panel.rs  file_picker.rs  mod.rs  node_list.rs  tabs.rs
scripts/: README.md  build-android-ndk.sh  build-android.ps1  build-android.sh
src/: logging.rs  main.rs
