[workspace]
members = ["crates/mdns"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "localp2p"
version.workspace = true
edition.workspace = true

[dependencies]
mdns = { path = "crates/mdns" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
