[package]
name = "localp2p-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# 复用核心 mdns crate
mdns = { path = "../mdns" }

# libp2p（用于 PeerId 解析）
libp2p = { version = "0.56", features = ["identify"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI 相关
libc = "0.2"

# 错误处理
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# 便捷工具
once_cell = "1.20"
futures = "0.3"
