[package]
name = "mdns"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
libp2p = { version = "0.56.0", features = ["mdns", "tokio", "tcp", "noise", "yamux", "identify", "macros", "ping", "request-response", "cbor"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
