[package]
name = "tui-app"
version.workspace = true
edition.workspace = true

[dependencies]
# 依赖 mdns crate
mdns = { path = "../mdns" }

# libp2p
libp2p = { version = "0.56", features = ["identify"] }

# TUI 相关依赖
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# 日志
tracing = "0.1"

# 其他依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
